# midi-slider

./: CMakeLists.txt  build.sh  cmake_install.cmake  midi-slider.c  usb_descriptors.c
